--- a/TENCAR/Base.lproj/Main.storyboard
+++ b/TENCAR/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8164.2" systemVersion="15A235d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="15A244d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -159,7 +159,7 @@
                                                 <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_ava" translatesAutoresizingMaskIntoConstraints="NO" id="8kl-oa-fGj">
                                                     <rect key="frame" x="23" y="17" width="25" height="25"/>
                                                     <animations/>
-                                                    <accessibility key="accessibilityConfiguration" identifier=""/>
+                                                    <accessibility key="accessibilityConfiguration"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="25" id="NjD-yQ-p8i"/>
                                                         <constraint firstAttribute="height" constant="25" id="UND-B4-cXh"/>
@@ -298,7 +298,7 @@
                                                 <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_ava" translatesAutoresizingMaskIntoConstraints="NO" id="cvv-b4-lfy">
                                                     <rect key="frame" x="23" y="17" width="25" height="25"/>
                                                     <animations/>
-                                                    <accessibility key="accessibilityConfiguration" identifier=""/>
+                                                    <accessibility key="accessibilityConfiguration"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="63m-Pg-oeg"/>
                                                         <constraint firstAttribute="width" constant="25" id="hC7-3w-cCX"/>
@@ -307,7 +307,7 @@
                                                 <imageView userInteractionEnabled="NO" tag="104" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="black_dot" translatesAutoresizingMaskIntoConstraints="NO" id="9tZ-wJ-WAZ">
                                                     <rect key="frame" x="514" y="35" width="5" height="5"/>
                                                     <animations/>
-                                                    <accessibility key="accessibilityConfiguration" identifier=""/>
+                                                    <accessibility key="accessibilityConfiguration"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="5" id="HmM-TG-UU3"/>
                                                         <constraint firstAttribute="height" constant="5" id="Wje-LT-g6v"/>
