--- a/TENCAR/Base.lproj/LaunchScreen.storyboard
+++ b/TENCAR/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="IqE-xZ-rF4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9058" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="IqE-xZ-rF4">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9048"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,13 +17,29 @@
                     <view key="view" contentMode="scaleToFill" id="yXc-IY-83F">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash_image" translatesAutoresizingMaskIntoConstraints="NO" id="eXV-tz-Qaw">
+                                <rect key="frame" x="20" y="20" width="560" height="580"/>
+                                <animations/>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="eXV-tz-Qaw" secondAttribute="trailing" id="KMV-Z0-kB3"/>
+                            <constraint firstItem="e1T-i6-rs2" firstAttribute="top" secondItem="eXV-tz-Qaw" secondAttribute="bottom" id="oKz-fC-hsl"/>
+                            <constraint firstItem="eXV-tz-Qaw" firstAttribute="leading" secondItem="yXc-IY-83F" secondAttribute="leadingMargin" id="vFd-Js-Yza"/>
+                            <constraint firstItem="eXV-tz-Qaw" firstAttribute="top" secondItem="KEI-yO-TVG" secondAttribute="bottom" id="yZN-5l-WLl"/>
+                        </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U0r-tg-sVZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-505" y="227"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splash_image" width="2208" height="2208"/>
+    </resources>
 </document>
